# liquidCacheVelox

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_EN.md  debug.txt
.github/workflows/: ci.yml
.qoder/repowiki/zh/content/: JNI 桥接系统.md  开发工具与实用程序.md  快速开始.md  故障排除与调试.md  构建与部署.md  测试与基准测试.md  项目概述.md
.qoder/repowiki/zh/content/API 参考手册/: API 参考手册.md  JNI 桥接 API.md  转码器 API.md
.qoder/repowiki/zh/content/API 参考手册/数组 API/: 数组 API.md  数组内存布局.md  数组包装器模板.md  数组基类接口.md  数组访问方法.md
.qoder/repowiki/zh/content/API 参考手册/数组 API/数组类型体系/: 字符串字节数组类型.md  数组类型体系.md  数组类型注册机制.md  整数数组类型.md  浮点数组类型.md
.qoder/repowiki/zh/content/API 参考手册/缓存 API/: 批量加载.md  插入操作.md  查询操作.md  缓存 API.md  缓存统计.md  缓存键管理.md
.qoder/repowiki/zh/content/引擎集成/: Arrow 集成.md  JNI 桥接.md  Velox 集成.md  引擎集成.md
.qoder/repowiki/zh/content/数据转码系统/: 性能优化策略.md  数据转码系统.md  格式转换机制.md  类型分发系统.md  转码器架构设计.md
.qoder/repowiki/zh/content/数据转码系统/编码算法详解/: 字符串和字节编码.md  整数编码 (FoR + BitPacking).md  浮点数编码 (ALP).md  线性整数编码.md  编码算法详解.md
.qoder/repowiki/zh/content/数组抽象层/: 引擎适配层.md  抽象基类设计.md  数组抽象层.md  数组接口契约.md  类型擦除机制.md
.qoder/repowiki/zh/content/核心 API 参考/: IPC Header 头部 API.md  Liquid Arrays 数组 API.md  Transcoder 转码器 API.md  位打包数组 API.md  核心 API 参考.md
.qoder/repowiki/zh/content/核心架构设计/: 内存管理策略.md  数组抽象层设计.md  核心架构设计.md  缓存系统架构.md  转码器架构设计.md
.qoder/repowiki/zh/content/示例与基准测试/: Spark 集成示例.md  基础使用示例.md  性能基准测试.md  最佳实践指南.md  示例与基准测试.md
.qoder/repowiki/zh/content/缓存系统详解/: LRU 淘汰策略.md  内存管理策略.md  线程安全机制.md  缓存操作接口.md  缓存系统详解.md  缓存键设计.md
.qoder/repowiki/zh/content/编码算法详解/: 位打包数组实现.md  帧对参考（FoR）算法.md  编码性能优化.md  编码算法详解.md  自适应无损浮点（ALP）编码.md
.qoder/repowiki/zh/content/项目概述/: 英文README文档.md  项目概述.md
.qoder/repowiki/zh/content/高级主题/: 内存管理策略.md  并发处理机制.md  性能优化技巧.md  扩展开发指南.md  调试与故障排除.md  高级主题.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qoder/specs/: optimize-to-arrow-decode-path.md
examples/: transcode_example.cpp  velox_benchmark.cpp
include/liquid_cache/: bit_packed_array.h  compressor_states.h  fsst.h  ipc_header.h  jni_bridge.h  liquid_array.h  liquid_arrays.h  liquid_byte_view_array.h  liquid_cache_store.h  liquid_decimal_array.h  liquid_fixed_len_byte_array.h  liquid_to_velox.h  lru_policy.h  transcoder.h
scripts/: build_jni_library.sh  build_velox_benchmark.sh  generate_test_parquet.sh  run_all_tests.sh
src/: jni_bridge.cpp  liquid_to_velox.cpp  transcoder_arrow.cpp
tests/: test_bit_packed.cpp  test_cache_budget.cpp  test_float_quantize.cpp  test_ipc_header.cpp  test_linear_integer.cpp  test_pipeline_integration.cpp  test_roundtrip.cpp  test_velox_crossval.cpp
tools/: bench_bit_packed.cpp  generate_test_parquet.cpp  verify_parquet.cpp
